--- a/src/html/include/header.html
+++ b/src/html/include/header.html
@@ -15,7 +15,7 @@
             </li>
             <li class="second"><a href="#">我的账户</a></li>
             <li class="third"><a href="#">我的收藏</a></li>
-            <li class="last"><a href="#">登录/注册</a></li>
+            <li class="last"><a href="html/login.html">登录/注册</a></li>
         </ul>
         <div class="header_cart">
             <div class="summary">
