--- a/src/html/include/header.html
+++ b/src/html/include/header.html
@@ -39,18 +39,18 @@
                     <div class="left">
                         <div class="left_l">
                             <a class="level1 qjyp" href="#">清洁用品</a>
-                            <div>
+                            <div class="marg">
                                 <a href="#"><span>衣物清洁</span></a>
                                 <a href="#"><span>除菌消毒</span></a>
                                 <a href="#"><span>贝壳粉</span></a>
-                                <!-- <a href="#"><span>洗洁精</span></a> -->
+                                <a href="#"><span>洗洁精</span></a>
                                 <a href="#"><span>油污净</span></a>
                                 <a href="#"><span>洁厕剂</span></a>
                                 <a href="#"><span>管道疏通</span></a>
                                 <a href="#"><span>其他清洁用品</span></a>
                             </div>
                             <a href="#" class="level1 cycj">餐饮厨具</a>
-                            <div>
+                            <div class="marg">
                                 <a href="#">烹饪锅具</a>
                                 <a href="#">水杯/水具</a>
                                 <a href="#">保温杯/保温壶</a>
@@ -62,19 +62,62 @@
                                 <a href="#">酒具/茶具/杯具</a>
                                 <a href="#">酒具茶具</a>
                                 <a href="#">水杯水具</a>
-
-
                             </div>
+
                             <a href="#" class="level1 shdq">生活电器</a>
-                            <div>
+                            <div class="marg">
                                 <a href="#">扫地机器人</a>
                                 <a href="#">其他</a>
                             </div>
 
                         </div>
-                        <div class="left_m"></div>
-                        <div class="left_r"></div>
+                        <div class="left_m">
+
+                            <a class="level1 qjyp" href="#">厨房电器</a>
+                            <div class="marg">
+                                <a href="#"><span>咖啡机/咖啡壶</span></a>
+                                <a href="#"><span>原汁机/榨汁机</span></a>
+                                <a href="#"><span>搅拌机/料理机</span></a>
+                                <a href="#"><span>其他厨房电器</span></a>
+                                <a href="#"><span>电水壶/热水壶</span></a>
+                            </div>
+
+                            <a href="#" class="level1 cycj">生活日用</a>
+                            <div class="marg">
+                                <a href="#">家居收纳</a>
+                                <a href="#">雨伞雨具</a>
+                                <a href="#">纸品湿巾</a>
+                                <a href="#">床上用品</a>
+                                <a href="#">毛巾浴巾</a>
+                                <a href="#">家用小物</a>
+                                <a href="#">净化除味</a>
+                                <a href="#">家用保健</a>
+                                <a href="#">其他</a>
+                            </div>
+
+                        </div>
+                        <div class="left_r">
+
+
+
+
+                            <a class="level1 qjyp" href="#">数码办公</a>
+                            <div class="marg">
+                                <a href="#"><span>耳机</span></a>
+                                <a href="#"><span>音箱</span></a>
+                                <a href="#"><span>文具办公</span></a>
+                                <a href="#"><span>其他</span></a>
+                            </div>
+
+                            <a href="#" class="level1 cycj">家装软饰</a>
+                            <div class="marg">
+                                <a href="#">装饰摆件</a>
+                                <a href="#">花瓶花艺</a>
+                                <a href="#">家居建材</a>
+                            </div>
+                        </div>
                     </div>
+
                     <div class="right">
                         <div class="rmdp">
                             <p>热卖大牌</p>
