--- a/src/sass/detail.scss
+++ b/src/sass/detail.scss
@@ -1,3 +1,48 @@
+ .newRecomItemWrap{
+                box-sizing:border-box;
+                list-style:none;
+                width: 243px;
+                padding:0 24px;
+                float: left;
+                height: 310px;
+
+                a{
+                    margin-bottom: 10px;
+                    img{
+                        width: 100%;
+                        height:auto;
+                    }
+                }
+                p{
+                    overflow: hidden;
+                    margin-bottom: 9px;
+                    height: 40px;
+                    a{
+                        color: #666;
+                        font-weight: 400;
+                        font-size: 12px;
+                        line-height: 20px;
+                        word-break: break-all;
+                    }
+                }
+                .itemInfo{
+                    p{
+                        color: #E31436;
+                        font-weight: 700;
+                        font-size: 16px;
+                        line-height: 14px;
+                        span{
+                                padding-left: 5px;
+                                color: #999;
+                                font-weight: 400;
+                                font-size: 12px;
+                                line-height:14px;
+                                text-decoration:line-through;
+                        }
+                    }
+                }
+            }
+
 .product-essential{
     font-size:12px;
     margin-bottom: 20px;
@@ -369,48 +414,7 @@
             padding: 10px 5px;
             border:1px solid #eaeaea;
             overflow:hidden;
-            .newRecomItemWrap{
-                list-style:none;
-                width: 243px;
-                padding:0 24px;
-                float: left;
-                height: 310px;
-                a{
-                    margin-bottom: 10px;
-                    img{
-                        width: 100%;
-                        height:auto;
-                    }
-                }
-                p{
-                    overflow: hidden;
-                    margin-bottom: 9px;
-                    height: 40px;
-                    a{
-                        color: #666;
-                        font-weight: 400;
-                        font-size: 12px;
-                        line-height: 20px;
-                        word-break: break-all;
-                    }
-                }
-                .itemInfo{
-                    p{
-                        color: #E31436;
-                        font-weight: 700;
-                        font-size: 16px;
-                        line-height: 14px;
-                        span{
-                                padding-left: 5px;
-                                color: #999;
-                                font-weight: 400;
-                                font-size: 12px;
-                                line-height:14px;
-                                text-decoration:line-through;
-                        }
-                    }
-                }
-            }
+
         }
     }
 }
@@ -424,6 +428,69 @@
         .product-view{
             margin-bottom: 30px;
             border:1px solid #eaeaea;
+            h4{
+                padding: 8px 10px;
+                border-bottom: 1px solid #EAEAEA;
+                color: #333;
+                font-weight: 700;
+                font-size: 16px;
+            }
+            ul{
+                overflow:hidden;
+                li{
+                    width: 218px;
+                    padding:10px 10px 16px 10px;
+                }
+            }
+        }
+    }
+    .detail_main{
+        width: 986px;
+        float:right;
+        .product-collateral{
+            border:1px solid #eaeaea;
+            .tabs{
+                .product-tabs{
+                    position: relative;
+                    z-index: 99;
+                    background: #f8f8f8;
+                    height: 48px;
+                    border-bottom: 1px solid #eaeaea;
+                    list-style:none;
+                    li{
+                        float: left;
+                        position: relative;
+                        border-right: 1px solid #EAEAEA;
+                        width: 159px;
+                        color: #333;
+                        text-align: center;
+                        height: 48px;
+                        line-height: 48px;
+                        font-size: 16px;
+                        cursor: pointer;
+                        vertical-align: top;
+                    }
+                    .active{
+                        color: #000;
+                        background-color: #FFF;
+                        font-weight: 700;
+                        a{
+                            border-top: 4px solid #58bae9;
+                            display: block;
+                            margin-top: -1px;
+                            height: 48px;
+                            line-height: 44px;
+                            background: #FFF;
+                        }
+                    }
+                }
+                .product-tabs-content{
+                    padding:50px;
+                    img{
+                        max-width:100%;
+                    }
+                }
+            }
         }
     }
 }
