--- a/src/sass/list.scss
+++ b/src/sass/list.scss
@@ -287,6 +287,9 @@
                     }
                 }
             }
+            .jjsh_product:hover{
+                box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+            }
         }
     }
 }
