--- a/src/html/include/header.html
+++ b/src/html/include/header.html
@@ -15,12 +15,12 @@
             </li>
             <li class="second"><a href="#">我的账户</a></li>
             <li class="third"><a href="#">我的收藏</a></li>
-            <li class="last"><a href="html/login.html">登录/注册</a></li>
+            <li class="last"><a href="/html/login.html">登录/注册</a></li>
         </ul>
         <div class="header_cart">
             <div class="summary">
-                <a href="cart.html" class="bag">购物车</a>
-                <div class="classy"><a href="cart.html">0</a></div>
+                <a href="/html/cart.html" class="bag">购物车</a>
+                <div class="classy"><a href="/html/cart.html">0</a></div>
             </div>
             <div class="remain_cart" style="display: none;"></div>
         </div>
@@ -31,10 +31,10 @@
     <div class="nav">
         <ul class="megamenu">
             <li>
-                <a href="#" class="level0"><span>首页</span></a>
+                <a href="/index.html" class="level0"><span>首页</span></a>
             </li>
             <li>
-                <a href="#" class="level0"><span>家居生活</span></a>
+                <a href="/html/list.html" class="level0"><span>家居生活</span></a>
                 <div class="megapanel" >
                     <div class="left">
                         <div class="left_l">
@@ -140,28 +140,28 @@
                 </div>
             </li>
             <li>
-                <a href="#" class="level0"><span>美妆个护</span></a>
+                <a href="/html/list.html" class="level0"><span>美妆个护</span></a>
 
             </li>
             <li>
-                <a href="#" class="level0"><span>食品保健</span></a>
+                <a href="/html/list.html" class="level0"><span>食品保健</span></a>
             </li>
             <li>
-                <a href="#" class="level0"><span>母婴用品</span></a>
+                <a href="/html/list.html" class="level0"><span>母婴用品</span></a>
             </li>
             <li>
-                <a href="#" class="level0"><span>生鲜果蔬</span></a>
+                <a href="/html/list.html" class="level0"><span>生鲜果蔬</span></a>
             </li>
             <li>
-                <a href="#" class="level0"><span>服饰鞋包</span></a>
+                <a href="/html/list.html" class="level0"><span>服饰鞋包</span></a>
             </li>
             <li>
-                <a href="#" class="level0"><span>运动户外</span></a>
+                <a href="/html/list.html" class="level0"><span>运动户外</span></a>
             </li>
-            <li><a href="#" class="level0"><span>平行进口车</span></a></li>
-            <li><a href="#" class="level0"><span>海外直邮</span></a></li>
-            <li><a href="#" class="level0"><span>促销SALE!</span></a></li>
-            <li><a href="#" class="level0"><span>最新上架</span></a></li>
+            <li><a href="/html/list.html" class="level0"><span>平行进口车</span></a></li>
+            <li><a href="/html/list.html" class="level0"><span>海外直邮</span></a></li>
+            <li><a href="/html/list.html" class="level0"><span>促销SALE!</span></a></li>
+            <li><a href="/html/list.html" class="level0"><span>最新上架</span></a></li>
         </ul>
 
         <form action="">
