--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -55,12 +55,22 @@
                         }
 
                         input{
+                            font-size: 15px;
                             width: 495px;
                             height:60px;
                             padding:21px 10px 20px;
                             outline:none;
                             float: left;
                             border:1px solid #dddddd;
+                        }
+                        div{
+                            display: none;
+                            width: 100%;
+                            float: left;
+                            height: 13px;
+                            margin-top: 16px;
+                            color:#eb340a;
+                            background: url('/images/validation_advice_bg.gif') no-repeat 2px 0;
                         }
                     }
                     li:first-child span{
@@ -96,7 +106,7 @@
                     width:100%;
                     height: 80px;
                     float:left;
-                    button{
+                    button,a{
 
                         span{
                             padding:20px 30px;
